--- a/CAETE-DVM-allom2light_REPROD/src/Makefile
+++ b/CAETE-DVM-allom2light_REPROD/src/Makefile
@@ -36,10 +36,10 @@ FLFLAGS = -c -g -lgomp -fopenmp -Wall -fcheck=all -Wextra -ffpe-trap=invalid,zer
 EXT_FLAGS = -fno-unsafe-math-optimizations -frounding-math -fsignaling-nans
 
 # Sources for compilation in run mode (F2PY)
-sources = global.f90 funcs.f90 soil_dec.f90 cc.f90 allocation.f90 productivity.f90 budget.f90
+sources = global.f90 funcs.f90 soil_dec.f90 cc.f90 allocation.f90 productivity.f90 module_reproduction.f90 budget.f90
 
 # Objects for compilation in debug mode
-objects = global.o funcs.o soil_dec.o cc.o allocation.o productivity.o budget.o debug_caete.o
+objects = global.o funcs.o soil_dec.o cc.o allocation.o productivity.o module_reproduction.o budget.o debug_caete.o
 
 # Build the interface and the shared object (caete_module) from .F90 source
 interface: $(sources)
@@ -99,6 +99,12 @@ productivity.o: productivity.f90
 
 productivity.mod: productivity.o productivity.f90
 	$(FC) $(FLFLAGS) productivity.f90
+
+module_reproduction.o: module_reproduction.f90
+	$(FC) $(FLFLAGS) module_reproduction.f90
+
+module_reproduction.mod: module_reproduction.o module_reproduction.f90
+	$(FC) $(FLFLAGS) module_reproduction.f90
 
 budget.o: budget.f90
 	$(FC) $(FLFLAGS) budget.f90
